fix bordi triangolo e text_container per visibilità

--- a/css/style.css
+++ b/css/style.css
@@ -509,6 +509,7 @@ footer h6 {
   background-color: white;
   margin-right: 22px;
   padding: 15px 35px 15px 10px;
+  border: 1px solid lightgrey;
   border-radius: 5px;
 }
 
@@ -522,16 +523,27 @@ footer h6 {
 }
 
 /* triangolo fumetto */
-.shark_text::after {
-  content: "";
-  position: absolute;
-  left: 100%;
+.shark_text:after,
+.shark_text:before {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 100%;
+    width: 0;
+    height: 0;
+    border-style: solid;
+}
+
+.shark_text:after {
+  top: 41px;
+  border-color: transparent transparent transparent white;
+  border-width: 10px;
+}
+
+.shark_text:before {
   top: 40px;
-  width: 0;
-  height: 0;
-  border-top: 8px solid transparent;
-  border-bottom: 8px solid transparent;
-  border-left: 10px solid white;
+  border-color: transparent transparent transparent lightgrey;
+  border-width: 11px;
 }
 /* /footer */
 
